[COM_SEARCH] More style clean up, minor bug fixes, formatting JS a little to be more readable

--- a/components/com_search/assets/hubgraph/hubgraph.css
+++ b/components/com_search/assets/hubgraph/hubgraph.css
@@ -412,12 +412,7 @@ button.current,
 	margin-right: 5px;
 	line-height: 26px;
 }
-.info {
-	margin-left: 30px;
-	font-style: oblique;
-	opacity: 0.7;
-	margin-top: 1em;
-}
+
 .results blockquote:before {
 	content: '';
 }
